# clark-agent

./: CITATION.cff  Cargo.toml  README.md
.github/workflows/: ci.yml
examples/: minimal.rs  tool_call.rs
src/: budget.rs  config.rs  error.rs  event.rs  exec.rs  history.rs  lib.rs  plugin.rs  protocol.rs  reasoning.rs  run.rs  stream.rs  thinking_filter.rs  tokens.rs  tool.rs  tool_identity.rs  tool_result_budget.rs  trajectory.rs  types.rs
src/plugins/: graceful_turn_limit.rs  mod.rs  opening_gate.rs
tests/: agent_message_persistence_roundtrip.rs  exclusive_sandbox.rs  graceful_turn_limit.rs  loop_smoke.rs  max_tokens_recovery.rs  sibling_abort.rs
